Fixed topbar-title-spacing to match new setting in topbar-title.scss file

--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -584,6 +584,6 @@ $tooltip-radius: $global-radius;
 $topbar-padding: 0.5rem;
 $topbar-background: $light-gray;
 $topbar-submenu-background: $topbar-background;
-$topbar-title-spacing: 1rem;
+$topbar-title-spacing: 0.45rem 1rem 0 1rem !default;
 $topbar-input-width: 200px;
 $topbar-unstack-breakpoint: medium;
